# imu_video_sync

./: .gitignore  CHANGELOG.md  IMUVideoSync.spec  LICENSE  README.md  ROADMAP.md  pyproject.toml  requirements-build.txt  requirements-venv312.txt  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml  new-device-support.yml
.github/workflows/: ci.yml  release.yml  tag-release.yml
docs/: README.md  TESTING.md  cli_flow.md  correlation.md  data_sources.md  overview.md  signal_processing.md
scripts/: build_exe.ps1  extract_gopro_imu_fixture.py  get_changelog_version.py  imu_video_sync_entry.py
src/imu_video_sync/: __init__.py  aim_csv.py  cli.py  correlate.py  gopro_extract.py  gui.py  io_out.py  preprocess.py
src/imu_video_sync/core/: __init__.py  models.py  signals.py
src/imu_video_sync/sources/: __init__.py  aim_csv.py  base.py  dji_osmo_action.py  gopro_gpmf.py  racebox_csv.py  racechrono_csv.py  registry.py  telemetry_parser_camera.py
tests/: AGENTS.md  conftest.py  test_aim_csv_parsing.py  test_cli_signals.py  test_columns.py  test_correlate_extra.py  test_correlation_sign.py  test_dji_osmo_action.py  test_fps_detection.py  test_gopro_extract_helpers.py  test_integration_realworld.py  test_io_out.py  test_preprocess.py  test_racechrono_csv.py  test_resample_overlap.py  test_telemetry_parser_camera.py
tests/fixtures/: 5f2167b0-racebox.csv  c1cba136-racechrono.csv  manifest.json  racechrono.csv
